src/objects/GH_Currency_Convertor__c/GH_Currency_Convertor__c.object-meta.xml
<CustomObject>
    <label>GH Currency Convertor</label>
    <nameField>
        <displayFormat>C-{0000}</displayFormat>
        <label>Record Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>GH Currency Convertor Records</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>