src/objects/GH_Currency_Convertor__c/fields/Currency_Code__c.field-meta.xml
<CustomField>
    <fullName>Currency_Code__c</fullName>
    <label>Currency Code</label>
    <length>5</length>
    <type>Text</type>
</CustomField>