src/objects/GH_Currency_Convertor__c/fields/Currency_Name__c.field-meta.xml
<CustomField>
    <fullName>Currency_Name__c</fullName>
    <label>Currency Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>