src/objects/GH_Currency_Convertor__c/fields/Daily_Equivalent_USD__c.field-meta.xml
<CustomField>
    <fullName>Daily_Equivalent_USD__c</fullName>
    <label>Daily Equivalent USD</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>