src/objects/GH_Currency_Convertor__c/recordTypes/GH_App_Currency.recordType-meta.xml
<RecordType>
    <fullName>GH_App_Currency</fullName>
    <active>true</active>
    <label>GH App Currency Rates</label>
</RecordType>